5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1764_1583.log
== TEST (2019-05-24 16:45:26) 
-- CODE:
vet= array(eval(input("Valores: ")))

vet2= ((vet[:3]) "." (vet[3:6]) "." (vet[6:-1]))
print(vet2)
-- ERROR:
File "XXXX", line 3
    vet2= ((vet[:3]) "." (vet[3:6]) "." (vet[6:-1]))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:47:53) 
-- CODE:
vet= array(eval(input("Valores: ")))

vet2= (vet[:3])
vet3= (vet[3:6])
vet4= (vet[6:-1])

print((vet2)'.'(vet3)'.'(vet4))
-- ERROR:
File "XXXX", line 7
    print((vet2)'.'(vet3)'.'(vet4))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:48:16) 
-- CODE:
vet= array(eval(input("Valores: ")))

vet2= (vet[:3])
vet3= (vet[3:6])
vet4= (vet[6:-1])

print((vet2)+'.'+(vet3)+'.'+(vet4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vet= array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:48:33) 
-- CODE:
vet= (eval(input("Valores: ")))

vet2= (vet[:3])
vet3= (vet[3:6])
vet4= (vet[6:-1])

print((vet2)+'.'+(vet3)+'.'+(vet4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vet2= (vet[:3])
TypeError: 'int' object is not subscriptable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:49:06) 
-- CODE:
vet= (eval(input("Valores: ")))

vet2= (vet[0:3])
vet3= (vet[3:6])
vet4= (vet[6:-1])

print((vet2)+'.'+(vet3)+'.'+(vet4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vet2= (vet[0:3])
TypeError: 'int' object is not subscriptable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:49:42) 
-- CODE:
vet= int(eval(input("Valores: ")))

vet2= (vet[0:3])
vet3= (vet[3:6])
vet4= (vet[6:-1])

print((vet2)+'.'+(vet3)+'.'+(vet4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vet2= (vet[0:3])
TypeError: 'int' object is not subscriptable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:50:26) 
-- CODE:
vet= eval(input("Valores: "))

vet2= (vet[0:3] dtype=int)
vet3= (vet[3:6])
vet4= (vet[6:-1])

print((vet2)+'.'+(vet3)+'.'+(vet4))
-- ERROR:
File "XXXX", line 3
    vet2= (vet[0:3] dtype=int)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:50:52) 
-- CODE:
vet= eval(input("Valores: "))

vet2= (vet[0:3])
vet3= (vet[3:6])
vet4= (vet[6:-1])

print((vet2)+'.'+(vet3)+'.'+(vet4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vet2= (vet[0:3])
TypeError: 'int' object is not subscriptable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:09:30) 
-- CODE:
from numpy import*
num = input("num")
i = 0 
j = 3
p = "."
tri = ""
while(i < len(num)):
	if(i < (len(num)-4)):
		tri = tri + num[i:j] + p
	else:
		tri = tri + num[i:j]
	i = i + 3
	j = j + 3
print(tri)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:09:32) 
-- CODE:
from numpy import*
num = input("num")
i = 0 
j = 3
p = "."
tri = ""
while(i < len(num)):
	if(i < (len(num)-4)):
		tri = tri + num[i:j] + p
	else:
		tri = tri + num[i:j]
	i = i + 3
	j = j + 3
print(tri)
-- EXECUTION TIME:
0.504572
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:52:05) 
-- CODE:
from numpy import*
num = input("num: ")
i = 0 
j = 3
p = "."
tri = ""
while(i < len(num)):
	if(i < (len(num)-4)):
		tri = tri + num[i:j] + p
	else:
		tri = tri + num[i:j]
	i = i + 3
	j = j + 3
print(tri)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:52:19) 
-- CODE:
from numpy import*
num = input("Digite: ")
i = 0 
j = 3
p = "."
tri = ""
while(i < len(num)):
	if(i < (len(num)-4)):
		tri = tri + num[i:j] + p
	else:
		tri = tri + num[i:j]
	i = i + 3
	j = j + 3
print(tri)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
